<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:tint="@color/text_color"
                android:layout_weight="1"
                android:text="@string/name_label"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                app:tint="@color/text_color"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_value"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:tint="@color/text_color"
                android:layout_weight="1"
                android:text="@string/constellation_label"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_constellation"
                android:layout_width="0dp"
                app:tint="@color/text_color"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/constellation_value"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:tint="@color/text_color"
                android:layout_weight="1"
                android:text="@string/right_ascension_label"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_right_ascension"
                android:layout_width="0dp"
                app:tint="@color/text_color"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/right_ascension_lvalue"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:tint="@color/text_color"
                android:layout_weight="1"
                android:text="@string/declination_label"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_declination"
                android:layout_width="0dp"
                app:tint="@color/text_color"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/declanation_value"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:tint="@color/text_color"
                android:layout_weight="1"
                android:text="@string/apparent_magnitude_label"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_apparent_magnitude"
                android:layout_width="0dp"
                app:tint="@color/text_color"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apparent_magnitude_value"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:tint="@color/text_color"
                android:layout_weight="1"
                android:text="@string/absolute_magnitude_label"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_absolute_magnitude"
                android:layout_width="0dp"
                app:tint="@color/text_color"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/absolute_magnitude_value"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:tint="@color/text_color"
                android:layout_weight="1"
                android:text="@string/distance_light_years_label"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="0dp"
                app:tint="@color/text_color"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/distance_light_years_value"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:tint="@color/text_color"
                android:layout_weight="1"
                android:text="@string/spectral_class_label"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_spectral_class"
                android:layout_width="0dp"
                app:tint="@color/text_color"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spectral_class_value"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
